--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -50,6 +50,7 @@
     border-radius: 1rem;
 
     @include u.breakpoint-down(small) {
+      text-align: center;
       align-items: center;
       justify-content: center;
     }
